Stable versions
---------------

4.3.1 ():
	- fix STM empty note event read
	- fix ABK loader test in Win32
	- fix XM invalid memory access in event reader
	- fix ST2.6 speed effect (reported by Saga Musix)
	- refactor depacking code
	- code cleanup

4.3.0 (20140926):
	Fix bugs reported by Sami Jumppanen:
	- fix MED4 instrument numbering
	- fix MED effect FFF (turn note off)
	- fix MED synth finetune effect
	Fix bugs reported by Alexander Null:
	- fix fine volume slide memory
	- fix IT portamento after note end in sample mode
	- fix S3M portamento after note end
	Fix bugs caught in the OpenMPT test cases:
	- add XM and IT envelope loop and sustain point quirk
	- fix Amiga limits for notes with finetune
	- fix XM invalid offset handling
	- fix XM note release reset on new volume
	- fix XM pattern loader to honor header size
	- fix XM fine volume slide effect memory
	- fix XM fine pitch slide effect memory
	- fix XM finetune effect
	- fix IT portamento if offset effect is used
	- fix IT NNA on invalid sample mapping
	- fix IT filter envelope index reset
	- fix IT envelope carry on note cut events
	- fix IT envelope reset on new instrument
	- fix IT instrument change on portamento in compatible GXX mode
	- fix IT unmapped sample parsing
	- fix IT filter cutoff reset
	Other changes:
	- add API call to load a module from a file handle
	- add API call to set default pan separation value
	- add OpenMPT test cases to regression test suite
	- add AMOS Music Bank loader (by Stephen Leary)
	- refactor memory I/O calls
	- read OctaMED annotation and song info text
	- fix segfault in mixer caused by sample position overflow
	- fix MED synth pitch slide reset on new note
	- fix MED synth volume change during wait command
	- fix MED synth envelope loop handling (reported by Stefan Martens) 
	- fix OctaMED SS default pitch transpose (reported by Karl Churchill)
	- fix OctaMED instrument name loading
	- fix XM, S3M, IT and MED offset effect handling